--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,13 +38,10 @@
         "*.html"
       ],
       "extends": [
-        "plugin:@angular-eslint/template/recommended"
+        "plugin:@angular-eslint/template/recommended",
+        "plugin:@angular-eslint/template/accessibility"
       ],
-      "rules": {
-        "@angular-eslint/template/eqeqeq": [
-          "off"
-        ]
-      }
+      "rules": {}
     }
   ]
 }
