--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,8 @@
 {
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=827846
   "recommendations": [
     "angular.ng-template",
     "EditorConfig.EditorConfig",
     "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint"
-  ],
+    "dbaeumer.vscode-eslint",
+  ]
 }
