--- a/src/proxy.config.json
+++ b/src/proxy.config.json
@@ -1,10 +1,7 @@
 {
-  "/dummyApi": {
-    "target": "https://dummyapi.io/data/v1/",
+  "v1/": {
+    "target": "https://dummyapi.io/data/",
     "secure": true,
-    "changeOrigin": true,
-    "pathRewrite": {
-      "^/dummyApi": ""
-    }
+    "changeOrigin": true
   }
 }
