--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^16.2.0",
     "@ngrx/effects": "^16.2.0",
     "@ngrx/store": "^16.2.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.4.1",
     "rxjs": "~7.8.0",
     "swiper": "^8.4.7",
     "tslib": "^2.3.0",
